# geant_voxel_s_values

B1/: CMakeLists.txt  README.md  exampleVoxelSValues.cc
B1/include/: VoxelSValuesPrimaryGeneratorAction.hh
B1/src/: VoxelSValuesDetectorConstruction.cc  VoxelSValuesEventAction.cc  VoxelSValuesPrimaryGeneratorAction.cc  VoxelSValuesRunAction.cc  VoxelSValuesSteppingAction.cc
source_voxel_absorbed_dose/: 100keV_electron_run.mac  100keV_gamma_run.mac  10keV_electron_run.mac  10keV_gamma_run.mac  1MeV_electron_run.mac  1MeV_gamma_run.mac  CMakeLists.txt  README.md  Y90_beta_run.mac  exampleVoxelSValues.cc  run1.mac  vis.mac
source_voxel_absorbed_dose/include/: DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
source_voxel_absorbed_dose/spectra/: Y90_beta.txt
source_voxel_absorbed_dose/src/: DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
